Update libvirt.mdx - BuilderId
//Artifact BuilderId: `thomasklein94.libvirt` > fix to make the packer-vagrant post-processor work
Artifact BuilderId: `libvirt`

--- a/docs/builders/libvirt.mdx
+++ b/docs/builders/libvirt.mdx
@@ -10,7 +10,8 @@ nav_title: Libvirt
 # Libvirt
 
 Type: `libvirt`
-Artifact BuilderId: `thomasklein94.libvirt`
+//Artifact BuilderId: `thomasklein94.libvirt` > fix to make the packer-vagrant post-processor work
+Artifact BuilderId: `libvirt`
 
 The Libvirt Builder is able to create Libvirt volumes on your libvirt hypervisor
 by copying an image from a http source, by using already existing volumes as a backing store,
