--- a/docs/builders/libvirt.mdx
+++ b/docs/builders/libvirt.mdx
@@ -31,8 +31,8 @@ To use the pre-built release of Packer Plugin Libvirt, you can add the following
 packer {
   required_plugins {
     libvirt = {
-      version = ">= 0.5.0"
-      source  = "github.com/thomasklein94/libvirt"
+      version = ">= 0.5.1"
+      source  = "github.com/jontur-git/libvirt"
     }
   }
 }
