--- a/docs/builders/libvirt.mdx
+++ b/docs/builders/libvirt.mdx
@@ -330,8 +330,8 @@ packer {
       source = "github.com/ivoronin/sshkey"
     }
     libvirt = {
-      version = ">= 0.5.0"
-      source  = "github.com/thomasklein94/libvirt"
+      version = ">= 0.5.1"
+      source  = "github.com/jontur-git/libvirt"
     }
   }
 }
